--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="https://nyaa.si/view/1025734"><pre>[Chotto] Steins;Gate 0 - 01v2 [1080p]</pre></a></li>
         <li><a href="https://nyaa.si/view/1028097"><pre>[Chotto] Steins;Gate 0 - 02 [1080p]</pre></a></li>
         <li><a href="https://nyaa.si/view/1030428"><pre>[Chotto] Steins;Gate 0 - 03 [1080p]</pre></a></li>
+        <li><a href="https://nyaa.si/view/1033025"><pre>[Chotto] Steins;Gate 0 - 04 [810p]</pre></a></li>
       </ul>
       <a href="/rss.xml">RSS</a>
     </p>
