--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     </p>
     <p>
       <h3>Releases</h3>
-      <ul>
-        <li><a href="https://nyaa.si/view/1014669"><pre>[Chotto] Gamers! - 01-12 [1080p x264 FLAC+AAC BD] [Dual Audio]</pre></a></li>
-        <li><a href="https://nyaa.si/view/1025734"><pre>[Chotto] Steins;Gate 0 - 01v2 [1080p]</pre></a></li>
-        <li><a href="https://nyaa.si/view/1028097"><pre>[Chotto] Steins;Gate 0 - 02 [1080p]</pre></a></li>
-        <li><a href="https://nyaa.si/view/1030428"><pre>[Chotto] Steins;Gate 0 - 03 [1080p]</pre></a></li>
-        <li><a href="https://nyaa.si/view/1033025"><pre>[Chotto] Steins;Gate 0 - 04 [810p]</pre></a></li>
+      <ul style="font-family: monospace;">
+        <li><a href="https://nyaa.si/view/1014669">[Chotto] Gamers! - 01-12 [1080p x264 FLAC+AAC BD] [Dual Audio]</a></li>
+        <li><a href="https://nyaa.si/view/1025734">[Chotto] Steins;Gate 0 - 01v2 [1080p]</a></li>
+        <li><a href="https://nyaa.si/view/1028097">[Chotto] Steins;Gate 0 - 02 [1080p]</a></li>
+        <li><a href="https://nyaa.si/view/1030428">[Chotto] Steins;Gate 0 - 03 [1080p]</a></li>
+        <li><a href="https://nyaa.si/view/1033025">[Chotto] Steins;Gate 0 - 04 [810p]</a></li>
+        <li>[Chotto] Steins;Gate 0 - 05 <a href="https://nyaa.si/view/1035452">[720p]</a> <a href="https://nyaa.si/view/1035451">[1080p]</a></li>
       </ul>
       <a href="/rss.xml">RSS</a>
     </p>
