--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="https://nyaa.si/view/1030428">[Chotto] Steins;Gate 0 - 03 [1080p]</a></li>
         <li><a href="https://nyaa.si/view/1033025">[Chotto] Steins;Gate 0 - 04 [810p]</a></li>
         <li>[Chotto] Steins;Gate 0 - 05 <a href="https://nyaa.si/view/1035452">[720p]</a> <a href="https://nyaa.si/view/1035451">[1080p]</a></li>
+        <li>[Chotto] Steins;Gate 0 - 06 <a href="https://nyaa.si/view/1037906">[720p]</a> <a href="https://nyaa.si/view/1037904">[1080p]</a></li>
       </ul>
       <a href="/rss.xml">RSS</a>
     </p>
